--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,68 @@
-<!DOCTYPE html><!--  Last Published: Wed Jun 26 2024 16:04:19 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="667b4e20cbe14516a6d36958" data-wf-site="667b33a1c6544ce9947a81e6">
+<!doctype html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Contact</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/conor-site-d0bd52.css" rel="stylesheet" type="text/css">
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+<meta charset="UTF-8">
+<title>design</title>
+<style>
+	html,body{ height: 100%; background-color:; font-family: Verdana, Geneva, sans-serif; margin: 0; display: flex; flex-direction: column; background: url('images/Waterfrony.gif') no-repeat center center fixed; background-size: cover; }	
+	
+	div {#c30000 #026935}
+	
+
+	
+	#container{margin: .8% 20% 0 20%; flex: 1;}
+	
+	#header{align-content: center;}
+	.homeLogo {cursor: pointer;}
+	#pagesBox{margin-top: 40px}
+	.linkBtn{color: navy; font-size: 14px; margin-top: 20px; cursor: pointer; display: block;}
+	
+	#content{display: flex;  flex-direction: column;}
+	.video img {display:flex; justify-content: flex-end; margin-top: 40px; width: 100%; height: auto; border-radius: 0; border: 0 solid black;}
+	.player{color:darkgreen; font-size: 14px;cursor:pointer;text-shadow:0 0 0px black; display:flex; justify-content: flex-end;}
+	#footer{padding:10px 0 10px 0 ;font-size: 10px; text-align: center; margin: 10px 0 10px 0;}
+	
+<link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+<link href="images/webclip.png" rel="apple-touch-icon">
+	
+</style>
 </head>
-<body class="body">
-  <section class="header">
-    <div class="w-layout-blockcontainer container header w-container">
-      <a href="index.html" class="link-block w-inline-block"><img src="images/CHLogo.svg" loading="lazy" alt="Name Logo
-"></a>
-    </div>
-  </section>
-  <section class="film">
-    <div class="w-layout-blockcontainer container mobile w-container">
-      <a href="film.html" class="link-block-2 w-inline-block">
-        <p class="paragraph-3">Film</p>
-      </a>
-    </div>
-  </section>
-  <section class="design">
-    <article class="w-layout-blockcontainer container mobile w-container">
-      <a href="design.html" class="w-inline-block">
-        <p class="paragraph">Design</p>
-      </a>
-    </article>
-  </section>
-  <section class="contact">
-    <div class="w-layout-blockcontainer container mobile w-container">
-      <a href="contact.html" aria-current="page" class="w-inline-block w--current">
-        <p class="paragraph-2">Contact and external links</p>
-      </a>
-    </div>
-  </section>
-  <section class="content">
-    <div class="w-layout-blockcontainer container mobile contact w-container">
-      <p class="paragraph-6">Name <a href="index.html" class="link-2">Conor Hébert<br></a><br>Email <a href="mailto:conorhhebert@gmail.com" class="link-2">conorhhebert@gmail.com</a><br><br>Vimeo <a href="https://vimeo.com/user196526549" target="_blank" class="link-3">sliceoflife31</a><br><br>Social media <a href="https://www.instagram.com/conorhebert/" target="_blank" class="link-4">conorhebert</a><br> <br>Location <a href="https://www.google.com/maps/place/New+York,+NY+10002/" class="link-2">Lower East Side of Manhattan</a>
-      </p>
-    </div>
-  </section>
-  <section class="footer">
-    <div class="w-layout-blockcontainer container footer w-container">
-      <p class="paragraph-4">Copyright © 2024 Conor Hébert</p>
-    </div>
-  </section>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=667b33a1c6544ce9947a81e6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/conor-site-d0bd52.js" type="text/javascript"></script>
+
+<body>
+	<div id="container">
+	
+	<div id="header">
+	<a href="index.html" class=".homeLogo"><img src="images/CHLogo.svg" alt="Name Logo"></a>
+	</div>
+	
+	<div id="pagesBox">
+	<a href="film.html" class="linkBtn">Film</a>
+	<a href="design.html" class="linkBtn">Design</a>
+	<a href="contact.html" class="linkBtn">Contact and external links</a>
+	</div>
+	
+	<div id="content">
+		
+	<div class="player">
+	<audio id="myAudio" src="audio/Cowgirl.mp3" preload="auto"></audio>
+    <a onclick="togglePlay()">play</a>	
+		
+	</div>
+ 	<div class="video"><img src="images/theFinger.gif" alt="finger gif"></div>		
+	</div>
+		
+	</div>
+	
+	<div id="footer">Copyright © 2025 Conor Hébert</div>
+	
+	
+<script>
+ var myAudio = document.getElementById("myAudio");
+      function togglePlay() {
+          return myAudio.paused ? myAudio.play() : myAudio.pause();
+      }  
+	
+</script>
+	
 </body>
 </html>
