--- a/design.html
+++ b/design.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>design</title>
 <style>
-	html,body{height: 100%; background-color:; font-family: Verdana, Geneva, sans-serif; margin: 0; display: flex; flex-direction: column;background: url('images/tropical.gif') no-repeat center center fixed; background-size: cover; }	
+	html,body{height: 100%; background-color:; font-family: Verdana, Geneva, sans-serif; margin: 0; display: flex; flex-direction: column;background: url('images/Tropical.gif') no-repeat center center fixed; background-size: cover; }	
 	
 	div {#c30000 #026935}
 	
